testsuite/tests/misc/invalid_static_expr/invalid_kind.lkt
import common

@repr_name(p"bar")
class FooNode implements Node[FooNode] {
}
